--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -1,13 +1,8 @@
+//- index.pug
 doctype html
-html(lang="en")
-  head
-    title= pageTitle
-    script(type='text/javascript').
+html
+  include ../includes/head.pug
   body
-    h1 Mealify helps you find the meal hacks hackers need
-    #container.col
-        p You are amazing
-
-        p.
-        Pug is a terse and simple templating language with a
-        strong focus on performance and powerful features.
+    h1 My Site
+    p Welcome to my super lame site.
+    include ../includes/foot.pug
