--- a/server/includes/layout.pug
+++ b/server/includes/layout.pug
@@ -2,7 +2,8 @@
 doctype html
 html
   head
-  link(rel="stylesheet", href='../../css/styles.css')
-  body
+    base(href='/')
+    link(rel="stylesheet", href='../../css/styles.css')
+  body(ng-app='app')
     block main-content
     include scripts
