--- a/zpug2/scripts.pug
+++ b/zpug2/scripts.pug
@@ -1,4 +1,5 @@
+script(src='build/partials/meals.js')
 script(src='../../lib/angular/angular.js')
 script(src='../../lib/angular-resource/angular-resource.js')
 script(src='../../lib/angular-route/angular-route.js')
-script(src='../../app/app.js')
+script(src='app.js')
